# halalnomad

./: .gitignore  CLAUDE.md  README.md  posthog-setup-report.md  wrangler.toml
.github/workflows/: ci.yml  pages.yml
app/: .env.example  .gitignore  app.json  eas.json  eslint.config.mjs  google-services.json  jest.config.js  package-lock.json  package.json
app/app/: _layout.tsx  auth.tsx  paywall.tsx  trips.tsx
app/app/(tabs)/: _layout.tsx  add.tsx  index.tsx  profile.tsx  search.tsx
app/app/city/: [city].tsx
app/app/place/: [id].tsx
app/app/trip/: [id].tsx
app/scripts/: release-preview.sh  release-prod.sh
app/src/__tests__/: analytics-host.test.ts  auth-utils.test.ts  coord-convert.test.ts  report-confidence.test.ts  sanitize.test.ts  schemas.test.ts  write-queue-b11-repro.test.ts  write-queue-coalesce.test.ts  write-queue.test.ts
app/src/components/: MapPin.tsx  (+18 more)
docs/: android-launch-checklist.md  app-store-checklist.md  business-model.md  competitive-analysis.md  mvp-scope.md  notifications.md  product-spec.md  production-readiness.md  release.md  technical-architecture.md
scripts/seed/: .env.example  .gitignore  README.md  cities.py  db.py  google_places.py  orphan_check.py  posthog_client.py  promote.py  pyproject.toml  report.py
supabase/: config.toml
supabase/email-templates/: confirm-signup.html
web/: README.md  account-deletion.html  analytics.js  app.js  cities.html  city.css  index.html  privacy.html  robots.txt  sitemap.xml  styles.css  terms.html  tokyo.html
web/auth/: confirmed.html
website/: index.html  privacy.html  terms.html
(+79 files in other folders)
